--- a/2.Attribute di Elemen HTML/atribut.html
+++ b/2.Attribute di Elemen HTML/atribut.html
@@ -12,4 +12,4 @@
 <p style="example">Menentukan styling secara satu baris untuk suatu elemen.</p>
 <p tabindex="example">Menentukan urutan dari suatu elemen.</p>
 <p title="example">Menentukan informasi tambahan tentang suatu elemen.</p>
-<p translate="example">Menentukan konten elemen harus diterjemahkan atau tidak.</p>
+<p translate="example">Menentukan konten elemen harus diterjemahkan atau tidak</p>
