--- a/13. Semantic HTML/Header dan Footer.html
+++ b/13. Semantic HTML/Header dan Footer.html
@@ -11,3 +11,30 @@
       </ul>
     </nav>
   </header>
+
+  <footer>
+    &copy; 2019, Dicoding Academy
+  </footer>
+
+
+  <!-- header dan footer di dalam artikel -->
+
+  <article>
+    <header>
+      <h1>Judul Artikel</h1>
+      <h2>Oleh: Dicoding Indonesia</h2>
+    </header>
+    <p>
+        <!-- ....... Konten artikel dimulai dari sini ...... -->
+      konten artikel </p>
+
+  </article>
+  <article>
+    
+    <footer>
+        <p>Bagikan artikel ini melalui</p>
+        <ul>
+          <li>Twitter</li>
+          <li>Facebook</li>
+        </ul>
+    </footer>
