--- a/15.tabel/Row Spans.html
+++ b/15.tabel/Row Spans.html
@@ -1,9 +1,9 @@
 <table border="1">
-
+<caption>Jadwal nonton film</caption>
     <tr>
         <th>Jam tayang</th>
         <th>judul film</th>
-        <th>besok</th>
+        <th>keterangan</th>
     </tr>
     <tr>
         <th rowspan="3">18:00</th>
@@ -14,29 +14,5 @@
       </tr>
       <tr>
         <td>Gundala</td>
-        <th rowspan="2">19:00</th>
-      </tr>      
-
-      <!-- next data -->
-      <tr>
-        <th rowspan="3">18:00</th>
-        <td>Avenger Infinity Wars</td>
-    </tr>
-    <tr>
-        <td>One Piece: Stampede</td>
-      </tr>
-      <tr>
-        <td>Gundala</td>
-      </tr>
-
+    </tr>      
 </table>
-
-<br>
-<!-- 
-<table border="1">
-    <tr>
-        <th>Jam tayang/th>
-        <th>judul film</th>
-        <th>besok</th>
-    </tr>
-</table> -->
